--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
 }
